--- a/Genie.ipynb
+++ b/Genie.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "lenses = pd.read_csv('lenses.csv')"
+    "from scipy.spatial.distance import squareform, pdist"
    ]
   },
   {
@@ -31,23 +31,12 @@
    },
    "outputs": [],
    "source": [
-    "from scipy.spatial.distance import squareform, pdist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "from scipy.sparse.csgraph import minimum_spanning_tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -145,7 +134,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set([1,2,1,3,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -194,13 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 144,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def genieLinkage(data, limiar):\n",
+    "def genieLinkage(data, limiar, clusterNumber):\n",
     "    \n",
     "    clusters = {}\n",
     "    row_index = 0\n",
@@ -221,8 +228,8 @@
     "        \n",
     "        if(gini(counting(clusters[k-1])) <= limiar):\n",
     "            for i in range(0, data.shape[0]):\n",
-    "                for j in range(0, data.shape[1]):\n",
-    "                    if(data[i][j]<=min_val):\n",
+    "                for j in range(i, data.shape[1]):\n",
+    "                    if(data[i][j]<min_val):\n",
     "                        min_val = data[i][j]\n",
     "                        row_index = i\n",
     "                        col_index = j\n",
@@ -231,7 +238,7 @@
     "            for i in iList:\n",
     "                for j in range(0, data.shape[0]):\n",
     "                    if(j not in iList):\n",
-    "                        if(data[i][j]<=min_val):\n",
+    "                        if(data[i][j]<min_val):\n",
     "                            min_val = data[i][j]\n",
     "                            row_index = i\n",
     "                            col_index = j\n",
@@ -250,30 +257,31 @@
     "                if(array[i]==array[j]):\n",
     "                    data[i][j] = sys.maxsize\n",
     "                    \n",
-    "        if (k>(data.shape[0]*0.8)):\n",
+    "        if (len(set(clusters[k])) == clusterNumber):\n",
+    "            print(set(clusters[k]))\n",
     "            return clusters[k]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def genie(dataset, limiar):\n",
+    "def genie(dataset, target, limiar, clusterNumber):\n",
     "    \n",
     "#     dataX = dataset.loc[:,dataset.columns[:-1]].values\n",
     "#     dataY = dataset.loc[:,[dataset.columns[-1]]].values\n",
-    "    dataX = dataset.data\n",
-    "    dataY = dataset.target\n",
+    "    dataX = dataset.values\n",
+    "    dataY = target[0]\n",
     "    \n",
     "    dataDistances = pairwise_distances(dataX,metric='euclidean')\n",
     "    #making all the diagonal elements infinity \n",
     "    np.fill_diagonal(dataDistances,sys.maxsize)\n",
     "    \n",
-    "    clusters = genieLinkage(dataDistances, limiar)\n",
+    "    clusters = genieLinkage(dataDistances, limiar, clusterNumber)\n",
     "    \n",
     "    labels = labelClusters(clusters, dataY)\n",
     "    \n",
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -296,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +313,7 @@
        "0.97333333333333338"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,12 +324,324 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.97999999999999998"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genie(iris, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a1 = pd.read_table(\"datasets/a1.data\", header=None, delim_whitespace=True)\n",
+    "iris5 = pd.read_table(\"datasets/iris5.data\", header=None, delim_whitespace=True)\n",
+    "flame = pd.read_table(\"datasets/flame.data\", header=None, delim_whitespace=True)\n",
+    "pathbased = pd.read_table(\"datasets/pathbased.data\", header=None, delim_whitespace=True)\n",
+    "unbalance = pd.read_table(\"datasets/unbalance.data\", header=None, delim_whitespace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1labels = pd.read_table(\"labels/a1.labels\", header=None, delim_whitespace=True)\n",
+    "iris5labels = pd.read_table(\"labels/iris5.labels\", header=None, delim_whitespace=True)\n",
+    "flamelabels = pd.read_table(\"labels/flame.labels\", header=None, delim_whitespace=True)\n",
+    "pathbasedlabels = pd.read_table(\"labels/pathbased.labels\", header=None, delim_whitespace=True)\n",
+    "unbalancelabels = pd.read_table(\"labels/unbalance.labels\", header=None, delim_whitespace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.89523809523809528"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genie(iris5, iris5labels, 0.3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.89523809523809528"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genie(iris5, iris5labels, 0.2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.89523809523809528"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genie(iris5, iris5labels, 0.4, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5714285714285714"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genie(iris5, iris5labels, 0.5, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5714285714285714"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genie(iris5, iris5labels, 0.6, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "104\n",
+      "103\n",
+      "102\n",
+      "101\n",
+      "100\n",
+      "99\n",
+      "98\n",
+      "97\n",
+      "96\n",
+      "95\n",
+      "94\n",
+      "93\n",
+      "92\n",
+      "91\n",
+      "90\n",
+      "89\n",
+      "88\n",
+      "87\n",
+      "86\n",
+      "85\n",
+      "84\n",
+      "83\n",
+      "82\n",
+      "81\n",
+      "80\n",
+      "79\n",
+      "78\n",
+      "77\n",
+      "76\n",
+      "75\n",
+      "74\n",
+      "73\n",
+      "72\n",
+      "71\n",
+      "70\n",
+      "69\n",
+      "68\n",
+      "67\n",
+      "66\n",
+      "65\n",
+      "64\n",
+      "63\n",
+      "62\n",
+      "61\n",
+      "60\n",
+      "59\n",
+      "58\n",
+      "57\n",
+      "56\n",
+      "55\n",
+      "54\n",
+      "53\n",
+      "52\n",
+      "51\n",
+      "50\n",
+      "49\n",
+      "48\n",
+      "47\n",
+      "46\n",
+      "45\n",
+      "44\n",
+      "43\n",
+      "42\n",
+      "41\n",
+      "40\n",
+      "39\n",
+      "38\n",
+      "37\n",
+      "36\n",
+      "35\n",
+      "34\n",
+      "33\n",
+      "32\n",
+      "31\n",
+      "30\n",
+      "29\n",
+      "28\n",
+      "27\n",
+      "26\n",
+      "25\n",
+      "24\n",
+      "23\n",
+      "22\n",
+      "21\n",
+      "20\n",
+      "19\n",
+      "18\n",
+      "17\n",
+      "16\n",
+      "15\n",
+      "14\n",
+      "13\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.54285714285714282"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genie(iris5, iris5labels, 1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 202, 56}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.82333333333333336"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genie(pathbased, pathbasedlabels, 0.3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(unbalancelabels[0]))"
+   ]
   }
  ],
  "metadata": {
