Melhorando genie e começando experimentos

--- a/Genie.ipynb
+++ b/Genie.ipynb
@@ -134,26 +134,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(set([1,2,1,3,4]))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": true
@@ -203,8 +183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def genieLinkage(data, limiar, clusterNumber):\n",
@@ -258,13 +240,107 @@
     "                    data[i][j] = sys.maxsize\n",
     "                    \n",
     "        if (len(set(clusters[k])) == clusterNumber):\n",
-    "            print(set(clusters[k]))\n",
     "            return clusters[k]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 'f'], [4, 2, 't'], [9, 4, 'afsd']]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [[0, 1, 'f'], [4, 2, 't'], [9, 4, 'afsd']]\n",
+    "l.sort(key=lambda x: x[0])\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def genieLinkage2(data, limiar, clusterNumber):\n",
+    "    \n",
+    "    clusters = {}\n",
+    "    row_index = 0\n",
+    "    col_index = 0\n",
+    "    array = []\n",
+    "    \n",
+    "\n",
+    "    for n in range(data.shape[0]):\n",
+    "        array.append(n)\n",
+    "    \n",
+    "        \n",
+    "    clusters[0] = array.copy()\n",
+    "    \n",
+    "    dists = []\n",
+    "    \n",
+    "    for i in range(0, data.shape[0]):\n",
+    "        for j in range(i, data.shape[1]):\n",
+    "            dists.append(([data[i][j], i, j]))\n",
+    "    \n",
+    "    dists.sort(key=lambda x: x[0])\n",
+    "    pos = 0\n",
+    "\n",
+    "    #finding minimum value from the distance matrix\n",
+    "    #note that this loop will always return minimum value from bottom triangle of matrix\n",
+    "    for k in range(1, data.shape[0]):\n",
+    "        min_val = sys.maxsize\n",
+    "        \n",
+    "        if(gini(counting(clusters[k-1])) <= limiar):\n",
+    "            for i in range(pos, len(dists)):\n",
+    "                if(dists[i][0] == data[dists[i][1]][dists[i][2]]):\n",
+    "                    pos = i\n",
+    "                    min_val = dists[i][0]\n",
+    "                    row_index = dists[i][1]\n",
+    "                    col_index = dists[i][2]\n",
+    "                    break\n",
+    "        else:\n",
+    "            iList = menorCluster(clusters[k-1])\n",
+    "            for i in iList:\n",
+    "                for j in range(0, data.shape[0]):\n",
+    "                    if(j not in iList):\n",
+    "                        if(data[i][j]<min_val):\n",
+    "                            min_val = data[i][j]\n",
+    "                            row_index = i\n",
+    "                            col_index = j\n",
+    "\n",
+    "        array = clusters[k-1].copy()\n",
+    "        minimum = min(array[row_index],array[col_index])\n",
+    "        maximum = max(array[row_index],array[col_index])\n",
+    "        \n",
+    "        for n in range(len(array)):\n",
+    "            if(array[n]==maximum):\n",
+    "                array[n] = minimum\n",
+    "        clusters[k] = array.copy()\n",
+    "        \n",
+    "        for i in range(len(array)):\n",
+    "            for j in range(len(array)):\n",
+    "                if(array[i]==array[j]):\n",
+    "                    data[i][j] = sys.maxsize\n",
+    "                    \n",
+    "        if (len(set(clusters[k])) == clusterNumber):\n",
+    "            return clusters[k]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -292,60 +368,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_iris\n",
-    "iris = load_iris()"
+    "def genie2(dataset, target, limiar, clusterNumber):\n",
+    "    \n",
+    "#     dataX = dataset.loc[:,dataset.columns[:-1]].values\n",
+    "#     dataY = dataset.loc[:,[dataset.columns[-1]]].values\n",
+    "    dataX = dataset.values\n",
+    "    dataY = target[0]\n",
+    "    \n",
+    "    dataDistances = pairwise_distances(dataX,metric='euclidean')\n",
+    "    #making all the diagonal elements infinity \n",
+    "    np.fill_diagonal(dataDistances,sys.maxsize)\n",
+    "    \n",
+    "    clusters = genieLinkage2(dataDistances, limiar, clusterNumber)\n",
+    "    \n",
+    "    labels = labelClusters(clusters, dataY)\n",
+    "    \n",
+    "    fmScore = f1_score(dataY, labels, average='micro')\n",
+    "    \n",
+    "    return fmScore"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.97333333333333338"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "genie(iris, 0.4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.97999999999999998"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "genie(iris, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a1 = pd.read_table(\"datasets/a1.data\", header=None, delim_whitespace=True)\n",
@@ -357,8 +411,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a1labels = pd.read_table(\"labels/a1.labels\", header=None, delim_whitespace=True)\n",
@@ -370,278 +426,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.89523809523809528"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "genie(iris5, iris5labels, 0.3, 3)"
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.89523809523809528"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "genie(iris5, iris5labels, 0.2, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.89523809523809528"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "genie(iris5, iris5labels, 0.4, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5714285714285714"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "genie(iris5, iris5labels, 0.5, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5714285714285714"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "genie(iris5, iris5labels, 0.6, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "104\n",
-      "103\n",
-      "102\n",
-      "101\n",
-      "100\n",
-      "99\n",
-      "98\n",
-      "97\n",
-      "96\n",
-      "95\n",
-      "94\n",
-      "93\n",
-      "92\n",
-      "91\n",
-      "90\n",
-      "89\n",
-      "88\n",
-      "87\n",
-      "86\n",
-      "85\n",
-      "84\n",
-      "83\n",
-      "82\n",
-      "81\n",
-      "80\n",
-      "79\n",
-      "78\n",
-      "77\n",
-      "76\n",
-      "75\n",
-      "74\n",
-      "73\n",
-      "72\n",
-      "71\n",
-      "70\n",
-      "69\n",
-      "68\n",
-      "67\n",
-      "66\n",
-      "65\n",
-      "64\n",
-      "63\n",
-      "62\n",
-      "61\n",
-      "60\n",
-      "59\n",
-      "58\n",
-      "57\n",
-      "56\n",
-      "55\n",
-      "54\n",
-      "53\n",
-      "52\n",
-      "51\n",
-      "50\n",
-      "49\n",
-      "48\n",
-      "47\n",
-      "46\n",
-      "45\n",
-      "44\n",
-      "43\n",
-      "42\n",
-      "41\n",
-      "40\n",
-      "39\n",
-      "38\n",
-      "37\n",
-      "36\n",
-      "35\n",
-      "34\n",
-      "33\n",
-      "32\n",
-      "31\n",
-      "30\n",
-      "29\n",
-      "28\n",
-      "27\n",
-      "26\n",
-      "25\n",
-      "24\n",
-      "23\n",
-      "22\n",
-      "21\n",
-      "20\n",
-      "19\n",
-      "18\n",
-      "17\n",
-      "16\n",
-      "15\n",
-      "14\n",
-      "13\n",
-      "12\n",
-      "11\n",
-      "10\n",
-      "9\n",
-      "8\n",
-      "7\n",
-      "6\n",
-      "5\n",
-      "4\n",
-      "3\n"
+      "0.895238095238\n",
+      "0.3586111068725586\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.54285714285714282"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "genie(iris5, iris5labels, 1, 3)"
+    "t1 = time.time()\n",
+    "print(genie(iris5, iris5labels, 0.3, 3))\n",
+    "t2 = time.time()\n",
+    "print(t2 - t1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 202, 56}\n"
+      "0.895238095238\n",
+      "0.23567605018615723\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.82333333333333336"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "genie(pathbased, pathbasedlabels, 0.3, 3)"
+    "t1 = time.time()\n",
+    "print(genie2(iris5, iris5labels, 0.3, 3))\n",
+    "t2 = time.time()\n",
+    "print(t2 - t1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.823333333333\n",
+      "9.737985134124756\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = time.time()\n",
+    "print(genie(pathbased, pathbasedlabels, 0.6, 3))\n",
+    "t2 = time.time()\n",
+    "print(t2 - t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.823333333333\n",
+      "4.458505868911743\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = time.time()\n",
+    "print(genie2(pathbased, pathbasedlabels, 0.6, 3))\n",
+    "t2 = time.time()\n",
+    "print(t2 - t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "[0.54285714285714282,\n",
+       " 0.89523809523809528,\n",
+       " 0.89523809523809528,\n",
+       " 0.89523809523809528,\n",
+       " 0.5714285714285714,\n",
+       " 0.5714285714285714]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(set(unbalancelabels[0]))"
+    "iris5data = []\n",
+    "for i in range(1,7):\n",
+    "    if (i==1):\n",
+    "        iris5data.append((genie2(iris5, iris5labels, 1, 3)))\n",
+    "    else:\n",
+    "        iris5data.append((genie2(iris5, iris5labels, i/10, 3)))\n",
+    "iris5data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# só executar da primeira vez\n",
+    "\n",
+    "# result = pd.DataFrame(columns = [\"single\",\"gini_02\",\"gini_03\",\"gini_04\",\"gini_05\",\"gini_06\"])\n",
+    "# result.loc[0] = iris5data\n",
+    "# result = result.rename({0:'iris5'})\n",
+    "# result.to_csv(\"results/result.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def computeScore(base):\n",
+    "    result = pd.read_csv(\"results/result.csv\", index_col=0)\n",
+    "    \n",
+    "    data = pd.read_table(\"datasets/\"+base+\".data\", header=None, delim_whitespace=True)\n",
+    "    labels = pd.read_table(\"labels/\"+base+\".labels\", header=None, delim_whitespace=True)\n",
+    "    k = len(set(labels[0]))\n",
+    "    \n",
+    "    resultData = []\n",
+    "    for i in range(1,7):\n",
+    "        if (i==1):\n",
+    "            resultData.append((genie2(data, labels, 1, k)))\n",
+    "        else:\n",
+    "            resultData.append((genie2(data, labels, i/10, k)))\n",
+    "    \n",
+    "    size = len(result)\n",
+    "    result.loc[size] = resultData\n",
+    "    result = result.rename({size:base})\n",
+    "    result.to_csv(\"results/result.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "computeScore(\"iris\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>single</th>\n",
+       "      <th>gini_02</th>\n",
+       "      <th>gini_03</th>\n",
+       "      <th>gini_04</th>\n",
+       "      <th>gini_05</th>\n",
+       "      <th>gini_06</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>iris5</th>\n",
+       "      <td>0.542857</td>\n",
+       "      <td>0.895238</td>\n",
+       "      <td>0.895238</td>\n",
+       "      <td>0.895238</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>iris</th>\n",
+       "      <td>0.680000</td>\n",
+       "      <td>0.960000</td>\n",
+       "      <td>0.960000</td>\n",
+       "      <td>0.960000</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>0.693333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aggregation</th>\n",
+       "      <td>0.827411</td>\n",
+       "      <td>0.790609</td>\n",
+       "      <td>0.847716</td>\n",
+       "      <td>0.870558</td>\n",
+       "      <td>0.911168</td>\n",
+       "      <td>0.827411</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               single   gini_02   gini_03   gini_04   gini_05   gini_06\n",
+       "iris5        0.542857  0.895238  0.895238  0.895238  0.571429  0.571429\n",
+       "iris         0.680000  0.960000  0.960000  0.960000  0.700000  0.693333\n",
+       "Aggregation  0.827411  0.790609  0.847716  0.870558  0.911168  0.827411"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = pd.read_csv(\"results/result.csv\", index_col=0)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "computeScore(\"Aggregation\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
